# modelstack

./: .gitignore  pyproject.toml
src/modelstack/: __init__.py  main.py
src/modelstack/backend/: __init__.py  continue_config.py  preflight.py  services.py  settings.py  ssh_manager.py
src/modelstack/gui/: __init__.py  connection_panel.py  log_panel.py  main_window.py  model_panel.py  service_panel.py
